# sample-workspace-tasks

./: .env-warn  .gitignore  .tasksignore  .workspace-tasks.json  CHANGELOG.md  README.md  Taskfile.yml  bitbucket-pipelines.yml  cliff.toml  eslint.config.mjs  package-lock.json  package.json  sample-workspace-tasks.code-workspace  tsconfig.json  webpack.config.js
.bitbucket/: bitbucket-pipelines.yml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  install-tools.sh
.devcontainer/files/home/vscode/: .bashrc  .p10k.zsh  .zshrc
.devcontainer/files/home/vscode/.config/powershell/: Microsoft.PowerShell_profile.ps1  darthminos.omp.json  profile.ps1
.devcontainer/files/home/vscode/.workspace-tasks/: logo.txt
.devcontainer/files/home/vscode/.zsh/custom/aliases/: default.zsh
.devcontainer/mount/: .postCreateCommandMarker
.github/workflows/: release.yml  sample-tasks.yml
.gitlab-ci-local/: expanded-gitlab-ci.yml
ant/: build.xml
apps/appA/: package.json  script1.sh
apps/appB/: package.json  script1.sh
apps/appC/: package.json  script1.sh
batch/: failing.bat  hello.bat  long-running.bat
cake/: build.cake
cargo/: Cargo.toml  Makefile.toml  custom.toml
cmake/: CMakeLists.txt  README.md
cmake/src/: greeter.cpp
composer/: composer.json
deno/: deno.json
gitlab/: .gitlab-ci.yml
golang/: go.mod
gradle/: build.gradle
grunt/: Gruntfile.js  package-lock.json  package.json
gulp/: gulpfile.js  package-lock.json  package.json
jupyter/: sample.ipynb
justfile/: justfile
makefile/: Makefile
maven/: pom.xml
mise/: .mise.toml  mise.local.toml  mise.toml
mise/.config/: mise.toml
mise/.config/mise/: config.toml
mise/.config/mise/conf.d/: dev.toml
mise/.mise/: config.toml
mise/mise/: config.toml
msbuild/: sample.proj
nodejs/: hello-node.mjs  package-lock.json  package.json
nodejs-grouped/: package.json
pipenv/: Pipfile
pnpm/: package.yaml
poe/: pyproject.toml
poetry/: pyproject.toml
powershell/: failing.ps1  hello.ps1  long-running.ps1
python/: no-shebang.py  pyproject.toml  tasks.py
rake/: Rakefile  assets.rake  database_tasks.rake  deploy.rake
ruby/: Gemfile
shell/: env-python  hello.sh  hello2.sh  long-running.sh  no-shebang.py  no-shebang.sh  stuck.sh  with-shebang.py
shell/bash/: failing.sh  no-shebang-executable  no-shebang.sh  with-shebang.sh
shell/deep/folder/path/for/task/fetch/: not-discovered.sh
shell/node/: env-s-node  node-argparse.js  node-argv.js  node-parseArgs.js
shell/pwsh/: ps-args-arrays.ps1  ps-args-basic.ps1  ps-args-choices.ps1  ps-args-combined.ps1  ps-args-switches.ps1  pwsh-params.ps1
shell/python/: py-args-accumulate.py  py-args-basic.py  py-args-choices.py  py-args-flags.py  py-args-nargs.py  python-argparse.py  python-argv.py  python-main-argparse.py
src/: fake.ts
task/: Taskfile.local.yml  Taskfile.yml
