[project]
name = "sample-poetry-project"
version = "0.1.0"
description = "A sample Poetry project for testing Workspace Tasks extension"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["poetry", "sample", "workspace-tasks"]
urls = { homepage = "https://example.com", repository = "https://github.com/camalot/vscode-workspace-tasks" }

[project.scripts]
sample-cli = "sample_poetry_project.cli:main"
run-server = "sample_poetry_project.server:serve"
print-version = "sample_poetry_project.cli:print_version"

[tool.poetry.scripts]
legacy-cli = "sample_poetry_project.legacy:main"
legacy-server = "sample_poetry_project.legacy:serve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
